# PX4_ROS_packages

./: .gitmodules  README.md
min_snap/: CMakeLists.txt  package.xml
min_snap/include/: min_snap.h  min_snap_node.h  optimization.h
min_snap/msg/: ConstraintValue.msg  Trajectory.msg  WayPoints.msg
min_snap/src/: min_snap.cpp  min_snap_node.cpp  optimization.cpp  test_min_snap.py
min_snap/srv/: PathPlan.srv
min_snap_ros/: CMakeLists.txt  package.xml
min_snap_ros/src/: min_snap_node.cpp  py_min_example.py
min_snap_ros/src/min_snap/: CMakeLists.txt  min_snap.cpp  result_plot.py  test_solver.cpp
min_snap_ros/src/min_snap/cmake/modules/: FindCBLAS.cmake  FindEigen3.cmake  FindLAPACKE.cmake
min_snap_ros/src/min_snap/include/: min_snap.h
offboard_control/: CMakeLists.txt  package.xml
offboard_control/launch/: gazebo_simulation.launch  quad10_joy.launch  quad10_offboard.launch  quad8_joy.launch  quad8_offboard.launch  quad9_joy.launch  quad9_offboard.launch  single_quad_gazebo_joystick.launch  single_quad_gazebo_no_joystick.launch  single_rover_gazebo_joystick.launch
offboard_control/src/: copter_visualization.cpp  fancy_traj.py  gazebo_vicon_remap.cpp  offboard_control.cpp  pos_control_offboard.py  pva_control_offboard.py  snap_joy.cpp  structs.h  tune_params.py  utils.cpp  utils.h  utils_functions.py  vicon_remap.cpp
offboard_control/src/HelperFunctions/: QuatRotEuler.cpp  QuatRotEuler.h  helper.cpp  helper.h
offboard_control/src/PosControl/: PosControl.cpp  PosControl.h
publishAirsimImgs/: CMakeLists.txt  README.md
publishAirsimImgs/include/: input_sampler.h
publishAirsimImgs/launch/: octomap.launch  pubForOctomap.launch  pubImages.launch  pubPointCloud.launch
publishAirsimImgs/src/: imgPublisher.cpp
qcontrol_defs/: CMakeLists.txt  CMakeLists.txt~  package.xml
qcontrol_defs/msg/: AccControl.msg  AttControl.msg  AttPVA.msg  ConstraintAxis.msg  ConstraintValue.msg  PVA.msg  PosControl.msg  QuadState.msg  Trajectory.msg  VelControl.msg  WayPoints.msg
qcontrol_defs/srv/: CommandAction.srv  PathPlan.srv  SimplePathPlan.srv
quad_control/src/: commander.py  quad_client.py  traj_server.py
reactive_test/: CMakeLists.txt  README.md  package.xml  simpleController.py
reactive_test/src/: 1row_env_controller.py  EnAddTargetController.py  EnAddTargetManager.py  ModTwoAddTargetController.py  ObstacleController.py  TwoAddTargetController.py  TwoAddTargetManager.py  TwoSysAddTargetController.py  add_target_controller.py  add_target_manager.py  cont_avoidance.py  create_params_env_sys.py  create_params_one_sys.py  data_plot.txt  discrete_reactive.py  env_node.py  followMeController10_2_2.py  followMeController15_2_1.py  followMeController_10_2_0_0.py  followMeController_10_2_0_0_obs.py  followMeController_30_4_1_1.py  followMeController_50_4_2_2_obs.py  follow_me_controller.py  follow_me_manager.py  follow_me_with_target.py  full_map_setting.txt  full_map_setting_controller.py  land.py  new_sys_env.txt  new_sys_env_envController_db.db  new_sys_env_env_controller.py  new_sys_env_sys_controller.py  no_env_controller.py  no_env_manager.py  obstacle_avoidance_controller.py  plot_move.py  rowEnvController.py  row_env_manager.py  save_manager.py  show_ref_marker.cpp  (+13 more)
