<?xml version="1.0"?>
<package>
  <name>qcontrol_defs</name>
  <version>1.0.0</version>
  <description>The qcontrol_defs package</description>

  <maintainer email="utopcu@utexas.edu">Ufuk Topcu</maintainer>
  <maintainer email="malshiekh@utexas.edu">Mohammed Alshiekh</maintainer>
  <maintainer email="frmbouwe@gmail.com">Franck Djeumou</maintainer>
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
