<?xml version="1.0"?>
<package>
  <name>reactive_test</name>
  <version>0.0.0</version>
  <description>The reactive_test package</description>

  <maintainer email="utopcu@utexas.edu">Ufuk Topcu</maintainer>
  <maintainer email="malshiekh@utexas.edu">Mohammed Alshiekh</maintainer>
  <maintainer email="frmbouwe@gmail.com">Franck Djeumou</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>qcontrol_defs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>qcontrol_defs</run_depend>

</package>